--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -1,10 +1,11 @@
 /* Add CSS Styling */
-.avatar, .proportioned {
+/* No commons for chained selectors */
+.avatar.proportioned {
     width: 300px;
     height: auto;
 }
 
-.avatar, .distorted {
+.avatar.distorted {
     width: 200px;
     height: 400px;
 }
