--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,8 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
 }
 
 .logo {
@@ -9,12 +11,14 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 0.5rem 0;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
-}
+  display: flex;
+  padding: 0;}
 
 a {
   font-size: 22px;
@@ -22,4 +26,6 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  display: block;
+  margin: 0 1rem;
 }
