--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,20 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+
+  .logo-links {
+    display: flex;
+    align-items: center;
+    margin-left: 1rem;
+  }
+
+  .noti-image {
+    display: flex;
+    align-items: center;
+    margin-right: 1rem;
+  }
 }
 
 .profile-image {
@@ -34,7 +48,8 @@ button {
   border-radius: 8px;
   background: rebeccapurple;
   color: white;
-  padding: 8px 24px;
+  margin-right: 0.8rem;
+  padding: 0.5rem 1rem;
 }
 
 a {
@@ -45,4 +60,7 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 8px;
+  padding-left: 0.5rem;
 }
