Change html tags

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,10 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+
+  display: flex;
+  gap: 1.5rem;
+  padding: 2rem;
 }
 
 .icon {
@@ -33,13 +37,15 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  border: none;
 }
 
 .close-button {
   background: #eee;
   border-radius: 50%;
   color: #888;
-  font-weight: 400;
+  font-weight: bolder;
   font-size: 16px;
   height: 24px;
   width: 24px;
@@ -47,7 +53,8 @@ body {
   align-items: center;
   justify-content: center;
   border: 1px solid #eee;
-  padding: 0;
+  padding: 0.5rem;
+  margin-left: 0.5rem;
 }
 
 button {
@@ -66,4 +73,17 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.head-close {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+
+  .header {
+    margin: 0;
+    font-size: 20px;
+    flex-shrink: 1;
+  }
 }
